# approx_cmp

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  rustfmt.toml
crates/abs_diff_cmp/: Cargo.toml
crates/abs_diff_cmp/src/: impl_alloc_slice.rs  impl_alloc_types.rs  impl_core_slice.rs  impl_core_tuple.rs  impl_core_types.rs  impl_std_types.rs  lib.rs  traits.rs
crates/abs_diff_cmp/tests/: test_arc.rs  test_array.rs  test_box.rs  test_btree_map.rs  test_cell.rs  test_hash_map.rs  test_linked_list.rs  test_once_cell.rs  test_once_lock.rs  test_option.rs  test_primitives.rs  test_rc.rs  test_ref_cell.rs  test_refs.rs  test_slice.rs  test_tuple.rs  test_unit.rs  test_vec.rs  test_vec_deque.rs
crates/approx_cmp_abs_diff/: Cargo.toml
crates/approx_cmp_abs_diff/src/: abs_diff_impl_core_tuple.rs  impl_alloc_types.rs  impl_core_slice.rs  impl_core_types.rs  impl_std_types.rs  lib.rs
crates/approx_cmp_abs_diff/tests/: test_abs_diff_impl_core.rs  test_abs_diff_impl_std.rs  test_arc.rs  test_array.rs  test_box.rs  test_btree_map.rs  test_cell.rs  test_float.rs  test_hash_map.rs  test_linked_list.rs  test_once_cell.rs  test_once_lock.rs  test_option.rs  test_rc.rs  test_ref_cell.rs  test_refs.rs  test_slice.rs  test_tuple.rs  test_unit.rs  test_vec.rs  test_vec_deque.rs
crates/approx_cmp_relative/: Cargo.toml
crates/approx_cmp_relative/src/: impl_alloc_types.rs  impl_core_types.rs  impl_std_types.rs  lib.rs  relative.rs  relative_impl_core_slice.rs  relative_impl_core_tuple.rs
crates/approx_cmp_relative/tests/: test_arc.rs  test_array.rs  test_box.rs  test_btree_map.rs  test_cell.rs  test_float.rs  test_hash_map.rs  test_linked_list.rs  test_once_cell.rs  test_once_lock.rs  test_option.rs  test_rc.rs  test_ref_cell.rs  test_refs.rs  test_relative_impl_core.rs  test_relative_impl_slice.rs  test_relative_impl_std.rs  test_relative_impl_tuple.rs  test_tuple.rs  test_unit.rs  test_vec.rs  test_vec_deque.rs
crates/relative_cmp/: Cargo.toml
crates/relative_cmp/src/: impl_alloc_slice.rs  impl_alloc_types.rs  impl_core_slice.rs  impl_core_tuple.rs  impl_core_types.rs  impl_std_types.rs  traits.rs
crates/relative_cmp/tests/: test_arc.rs  test_array.rs  test_box.rs  test_btree_map.rs  test_cell.rs  test_hash_map.rs  test_linked_list.rs  test_once_cell.rs  test_once_lock.rs  test_option.rs  test_primitives.rs  test_rc.rs  test_ref_cell.rs  test_refs.rs  test_slice.rs  test_tuple.rs  test_unit.rs  test_vec.rs  test_vec_deque.rs
crates/ulps_cmp/: Cargo.toml
crates/ulps_cmp/src/: impl_alloc_slice.rs  impl_alloc_types.rs  impl_core_slice.rs  impl_core_tuple.rs  impl_core_types.rs  impl_std_types.rs  lib.rs  traits.rs
crates/ulps_cmp/tests/: test_arc.rs  test_array.rs  test_box.rs  test_btree_map.rs  test_cell.rs  test_hash_map.rs  test_linked_list.rs  test_once_cell.rs  (+11 more)
src/: abs_diff.rs  abs_diff_eq.rs  abs_diff_impl_core.rs  abs_diff_impl_core_slice.rs  abs_diff_impl_core_tuple.rs  abs_diff_impl_std.rs  abs_diff_impl_std_slice.rs  abs_diff_why_eq.rs  lib.rs  relative.rs  relative_eq.rs  relative_impl_core.rs  relative_impl_core_slice.rs  relative_impl_core_tuple.rs  relative_impl_std.rs  relative_impl_std_slice.rs  relative_why_eq.rs  tolerance.rs
tests/: test_abs_diff_compare.rs  test_abs_diff_core.rs  test_abs_diff_eq.rs  test_abs_diff_eq_core.rs  test_abs_diff_eq_primitives.rs  test_abs_diff_impl_core.rs  test_abs_diff_impl_slice.rs  test_abs_diff_impl_std.rs  test_abs_diff_impl_tuple.rs  test_relative_core.rs  test_relative_eq.rs  test_relative_impl_core.rs  test_relative_impl_slice.rs  test_relative_impl_std.rs  test_relative_impl_tuple.rs
