[package]
name = "abs_diff_cmp"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
# Option: `core` is a platform-agnostic option that works in environments that only use
# the `core` library. The environment needs to supply its own implementations of 
# `eh_personality`.
core = []
# Option: `alloc` provides approximate comparison implementations data structures in
# the `alloc` library for applications that do not use the full standard library.
alloc = []
# Option: `std` enables support for environments that use the full standard library.
std = []

[dependencies]

