[package]
name = "relative_cmp"
version = "1.0.0"
edition = "2024"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A library for doing approximate comparisons of finite precision numbers."
categories = [
    "algorithms",
    "development-tools::debugging",
    "no_std",
]
keywords = [
    "approximate",
    "comparison",
    "float",
    "graphics",
    "numerics",
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/approx_cmp/"

[features]
default = ["std"]
# Option: `core` is a platform-agnostic option that works in environments that only use
# the `core` library. The environment needs to supply its own implementations of 
# `eh_personality`.
core = []
# Option: `alloc` provides approximate comparison implementations data structures in
# the `alloc` library for applications that do not use the full standard library.
alloc = []
# Option: `std` enables support for environments that use the full standard library.
std = []

[dependencies]

